# mudlet-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: config.py  main.py
bot/cogs/: __init__.py  bug_reporter.py
bot/models/: __init__.py  bug_report.py
bot/services/: __init__.py  duplicates.py  github_client.py  labels.py  llm.py
config/: prompts.py
tests/: test_bug_report.py  test_config.py  test_duplicates.py  test_github_client.py  test_integration.py  test_labels.py  test_llm.py  test_prompts.py
tests/fixtures/: sample_conversations.json
